%% Build and check from R:
%% news(db = tools:::.build_news_db_from_package_NEWS_Rd("<Matrix>/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R{} Package \pkg{Matrix}}
\encoding{UTF-8}
%% NB: The date (yyyy-mm-dd) is the "Packaged: " date in ../DESCRIPTION
\section{Changes in version 1.7-1 (2024-08-31 r4907)}{
  \subsection{Significant User-Visible Changes}{
    \itemize{
      \item .
    }
  }
  \subsection{New Features}{
    \itemize{
      \item .
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item Installation under architecture-specific builds of \R{}
      works again.  It was broken in version 1.7-0, where changes to
      \file{src/Makevars} resulted in \env{CPPFLAGS} not including
      \option{-I"${R_INCLUDE_DIR}${R_ARCH}"}.
    }
  }
  \subsection{Misc}{
    \itemize{
      \item Registered routine \code{sexp_as_cholmod_factor} no
      longer calls \code{cholmod_check_factor} before returning,
      leaving the decision to check to the caller.  Accordingly,
      most \code{cholmod_check_*} are now registered, though packages
      calling them must use \code{LinkingTo: Matrix (>= 1.7-1)}.

      \item Internal SuiteSparse and METIS libraries are further
      patched to avoid possible use of illegal entry points.
    }
  }
}

\section{Changes in version 1.7-0 (2024-03-16 r4662)}{
  \subsection{Significant User-Visible Changes}{
    \itemize{
      \item The internal collection of SuiteSparse libraries is updated
      from version 5.10.1 to version 7.6.0.  Hence the \pkg{Matrix} ABI
      version is incremented from 1 to 2.  Reverse \code{LinkingTo}
      built under earlier versions of \pkg{Matrix} should be rebuilt
      from sources by users and maintainers of binary repositories.\cr
      \cr
      We have so far identified one backwards incompatible change:
      since SuiteSparse version 7.3.0, \code{cholmod_sort(A)} sorts
      but \emph{does not pack} the matrix \code{A}.  It seems that