@@ -62,7 +62,7 @@ size_t kindToSize(char kind)
 
 const char *Matrix_nonvirtual(SEXP obj, int strict)
 {
-	if (!IS_S4_OBJECT(obj))
+	if (!isS4(obj))
 		return "";
 	static const char *valid[] = { VALID_NONVIRTUAL, "" };
 	int ivalid = R_check_class_etc(obj, valid);
@@ -75,7 +75,7 @@ const char *Matrix_nonvirtual(SEXP obj, int strict)
 
 char Matrix_kind(SEXP obj)
 {
-	if (IS_S4_OBJECT(obj)) {
+	if (isS4(obj)) {
 		static const char *valid[] = { VALID_NONVIRTUAL, "" };
 		int ivalid = R_check_class_etc(obj, valid);
 		if (ivalid < 0)
@@ -101,7 +101,7 @@ char Matrix_kind(SEXP obj)
 
 char Matrix_shape(SEXP obj)
 {
-	if (!IS_S4_OBJECT(obj))
+	if (!isS4(obj))
 		return '\0';
 	static const char *valid[] = { VALID_NONVIRTUAL, "" };
 	int ivalid = R_check_class_etc(obj, valid);
@@ -114,7 +114,7 @@ char Matrix_shape(SEXP obj)
 
 char Matrix_repr(SEXP obj)
 {
-	if (!IS_S4_OBJECT(obj))
+	if (!isS4(obj))
 		return '\0';
 	static const char *valid[] = { VALID_NONVIRTUAL_MATRIX, "" };
 	int ivalid = R_check_class_etc(obj, valid);
