@@ -2,7 +2,20 @@
 #include "Mdefines.h"
 #include "utils.h"
 
+#if R_VERSION < R_Version(4, 5, 0)
+int ANY_ATTRIB(SEXP x)
+{
+	return ATTRIB(x) != R_NilValue;
+}
 
+void CLEAR_ATTRIB(SEXP x)
+{
+	SET_ATTRIB(x, R_NilValue);
+	SET_OBJECT(x, 0);
+	UNSET_S4_OBJECT(x);
+	return;
+}
+#endif
 
 char *Matrix_sprintf(const char *format, ...)
 {
