@@ -3,6 +3,12 @@
 
 #include <stddef.h> /* size_t */
 #include <Rinternals.h>
+#include <Rversion.h>
+
+#if R_VERSION < R_Version(4, 5, 0)
+int ANY_ATTRIB(SEXP);
+void CLEAR_ATTRIB(SEXP);
+#endif
 
 char *Matrix_sprintf(const char *, ...);
 
